2003-12-18  Jakub Steiner <jimmac@ximian.com>

	* 24x24/stock/net/stock_mail-next.png
	* 24x24/stock/net/stock_mail-previous.png
	* 24x24/stock/net/Makefile.am: redundant (removed)

2003-12-17  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/gnome-settings.png
	* 16x16/stock/generic/stock_folder-copy.png
	* 16x16/stock/generic/stock_folder-move.png
	* 16x16/stock/generic/stock_undelete.png
	* 16x16/stock/net/stock_contact-list.png
	* 16x16/stock/net/stock_mail-copy.png
	* 16x16/stock/net/stock_mail-filters-apply.png
	* 16x16/stock/net/stock_mail-flag-for-followup-done.png
	* 16x16/stock/net/stock_mail-flag-for-followup.png
	* 16x16/stock/net/stock_mail-hide-deleted.png
	* 16x16/stock/net/stock_mail-hide-read.png
	* 16x16/stock/net/stock_mail-hide-selected.png
	* 16x16/stock/net/stock_mail-import.png
	* 16x16/stock/net/stock_mail-move.png
	* 16x16/stock/net/stock_mail-priority-high.png
	* 16x16/stock/net/stock_mail-replied.png
	* 16x16/stock/net/stock_mail-send-receive.png
	* 16x16/stock/net/stock_mail-unread.png
	* 24x24/apps/gnome-settings.png
	* 24x24/stock/generic/stock_folder-copy.png
	* 24x24/stock/generic/stock_folder-move.png
	* 24x24/stock/generic/stock_undelete.png
	* 24x24/stock/net/stock_contact-list.png
	* 24x24/stock/net/stock_mail-copy.png
	* 24x24/stock/net/stock_mail-import.png
	* 24x24/stock/net/stock_mail-move.png
	* 24x24/stock/net/stock_mail-next.png
	* 24x24/stock/net/stock_mail-previous.png
	* 24x24/stock/net/stock_mail-replied.png
	* 24x24/stock/net/stock_mail-send-receive.png
	* 24x24/stock/net/stock_mail-unread.png
	* 32x32/stock/generic/stock_alarm.png
	* 48x48/stock/generic/stock_alarm.png
	* 48x48/stock/net/stock_mail-flag-for-followup-done.png
	* 48x48/stock/net/stock_mail-flag-for-followup.png
	* 16x16/apps/Makefile.am
	* 16x16/stock/generic/Makefile.am
	* 16x16/stock/net/Makefile.am
	* 24x24/apps/Makefile.am
	* 24x24/stock/generic/Makefile.am
	* 24x24/stock/net/Makefile.am
	* 32x32/stock/generic/Makefile.am