@@ -7,6 +7,7 @@ icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)
 icon_DATA =\
 	gnome-fs-directory-accept.icon \
 	gnome-fs-directory-accept.png \
+	gnome-fs-directory-visiting.png \
 	gnome-fs-directory.icon \
 	gnome-fs-directory.png \
 	$(NULL)
