@@ -1,5 +1,11 @@
 2003-12-18  Jakub Steiner <jimmac@ximian.com>
 
+	* {12x12,24x24,36x36,48x48,72x72,96x96}/
+	   filesystems/gnome-fs-directory-visiting.png &
+	   filesystems/Makefile.am: quickly hacked icon for spatialtilus
+
+2003-12-18  Jakub Steiner <jimmac@ximian.com>
+
 	* 24x24/stock/net/stock_mail-next.png
 	* 24x24/stock/net/stock_mail-previous.png
 	* 24x24/stock/net/Makefile.am: redundant (removed)
